<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="34sp"
                android:layout_gravity="center"
                android:text="@string/gpa_calculator"
                />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/creditEditText"
                    android:textSize="15sp"
                    android:hint="@string/credit"
                   android:gravity="center" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gradeEditText"
                android:textSize="15sp"
                android:gravity="center"
                android:hint="@string/grade"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buton1Add"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:text="@string/add"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/calculate"
                android:text="@string/compute_gpa"
                android:textSize="20sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/gpaTextView"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_width="300px"
                android:layout_height="120px"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="950px"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/eraseButton"
                android:layout_gravity="center"
                android:text="@string/erase"
                />


        </LinearLayout>

    </ScrollView>

</LinearLayout>
